# Project-of-xlnt

./: .claudiaideconfig  .gitignore  1.xlsx  CMakeLists.txt  README.md  main.cc  test.xlsx
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: between.h  column_to_letter.h  isDate.h  print_cell_as_date.h  replace_all.h  str_to_date.h
src/: 1.xlsx  between.cc  column_to_letter.cc  isDate.cc  print_cell_as_date.cc  replace_all.cc  str_to_date.cc  test.xlsx
src/test/: dataFilter.cc  example.cc  example.xlsx  formula.cc  formula.xlsx  formula2.cc  formulas.xlsx  process.cc  read.cc  version_read.cc  write.cc
xlnt-1.5.0/: CMakeLists.txt
